feat: new parcel card (#200)
* feat: update the API to accomodate for new features

* feat: add ParcelCard component mocking existing

* feat: update saga api calls. new API requirements

* feat: finish implementing ParcelCard. move to parcels with publications everywhere

* chore: remove test code, fix lint and tests

* fix: always send default values on filter api call

* fix: homepage parcel cards style

* feat: add last_transfered_at time to parcels

* fix: fix last sold at time

* fix: don't show highlights title if tags is empty

* fix: update specs

* fix: show tags in same order. don't clip tooltips

* fix: filter expired publications

* fix: return only open publications on inRange

* fix: unique key

* fix: only show open publication prices

* fix: don't send empty status

* fix: correctly fetch asset_ids

* feat: bump decentraland eth

* chore: added translation

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -60,6 +60,7 @@
     "on_sale": "En Venta"
   },
   "publication": {
+    "acquired_at": "Adquirida en {date}",
     "expired_at": "Expiró {time}",
     "expires_in": "Expira {time}",
     "expires_in_more_than_years": "Expira en más de {years} años",
@@ -95,13 +96,7 @@
       "no_owner": "Sin Dueño"
     },
     "tags": {
-      "title": "Contexto",
-      "road": "Camino",
-      "plaza": "Plaza",
-      "district": "Distrito",
-      "adjacent": "Adyacente",
-      "proximity":
-        "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia"
+      "title": "Contexto"
     },
     "history": {
       "title": "Historial de Transacciones",
@@ -113,6 +108,14 @@
       "sold": "Venta",
       "auction": "Subasta"
     }
+  },
+  "parcel_tags": {
+    "road": "Camino",
+    "plaza": "Plaza",
+    "district": "Distrito",
+    "adjacent": "Adyacente",
+    "proximity":
+      "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia"
   },
   "parcel_edit": {
     "edit_land": "Editar LAND",
