--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -60,6 +60,7 @@
     "on_sale": "On Sale"
   },
   "publication": {
+    "acquired_at": "Acquired at {date}",
     "expired_at": "Expired {time}",
     "expires_in": "Expires {time}",
     "expires_in_more_than_years": "Expires in over {years} years",
@@ -95,12 +96,7 @@
       "no_owner": "No Owner"
     },
     "tags": {
-      "title": "Highlights",
-      "road": "Road",
-      "plaza": "Plaza",
-      "district": "District",
-      "adjacent": "Adjacent",
-      "proximity": "{distance} {distance, plural, one {parcel} other {parcels}} away"
+      "title": "Highlights"
     },
     "history": {
       "title": "Transaction History",
@@ -112,6 +108,14 @@
       "sold": "Sold",
       "auction": "Auction"
     }
+  },
+  "parcel_tags": {
+    "road": "Road",
+    "plaza": "Plaza",
+    "district": "District",
+    "adjacent": "Adjacent",
+    "proximity":
+      "{distance} {distance, plural, one {parcel} other {parcels}} away"
   },
   "parcel_edit": {
     "edit_land": "Edit LAND",
