--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -60,6 +60,7 @@
     "on_sale": "出售"
   },
   "publication": {
+    "acquired_at": "在{date}收购",
     "expired_at": "已于{time}前过期",
     "expires_in": "将于{time}后到期",
     "expires_in_more_than_years": "超过{years}年",
@@ -95,12 +96,7 @@
       "no_owner": "没有所有者"
     },
     "tags": {
-      "title": "强调",
-      "road": "路",
-      "plaza": "广场",
-      "district": "小区",
-      "adjacent": "邻",
-      "proximity": "{distance}包裹离开"
+      "title": "强调"
     },
     "history": {
       "title": "交易历史",
@@ -112,6 +108,13 @@
       "sold": "文塔",
       "auction": "拍卖"
     }
+  },
+  "parcel_tags": {
+    "road": "路",
+    "plaza": "广场",
+    "district": "小区",
+    "adjacent": "邻",
+    "proximity": "{distance}包裹离开"
   },
   "parcel_edit": {
     "edit_land": "编辑土地",
