--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -55,6 +55,16 @@
       "close_to_expire": "가장 빨리 만료되는"
     }
   },
+  "dashboard": {
+    "stats_title": "일부 숫자",
+    "transactions_title": "최근 거래",
+    "land_owners": "토지 소유자",
+    "active_users": "LAND소유자",
+    "land_traded": "활성 사용자",
+    "land_on_sale": "LAND거래",
+    "transaction_description":
+      "{price}에 대해 {seller_link}에서 {buyer_link}로 판매되는 LAND {parcel_link}"
+  },
   "profile_page": {
     "empty": "사용자에게는 {content}가 없습니다.",
     "on_sale": "판매 중"
