--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -56,6 +56,17 @@
       "close_to_expire": "Près de l'expiration"
     }
   },
+  "dashboard": {
+    "stats_title": "Quelques chiffres",
+    "transactions_title": "Dernières transactions",
+    "land_owners": "Propriétaires de LAND",
+    "active_users": "Utilisateurs actifs",
+    "land_traded": "LAND échangé",
+    "land_on_sale": "LAND à vendre",
+    "transaction_description":
+      "LAND {parcel_link} vendu de {seller_link} à {buyer_link} pour {price}"
+  },
+
   "profile_page": {
     "empty": "L'utilisateur n'as pas de {content}",
     "on_sale": "A vendre"
