--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -9,7 +9,7 @@
   "global": {
     "atlas": "Atlas",
     "marketplace": "Marketplace",
-    "dashboard": "Dashboard",
+    "dashboard": "Stats",
     "profile": "My Land",
     "activity": "Activity",
     "parcels": "Parcels",
@@ -61,7 +61,8 @@
     "active_users": "Active users",
     "land_traded": "LAND traded",
     "land_on_sale": "LAND on sale",
-    "transaction_description": "LAND {parcel_link} sold from {seller_link} to {buyer_link} for {price}"
+    "transaction_description":
+      "LAND {parcel_link} sold from {seller_link} to {buyer_link} for {price}"
   },
   "profile_page": {
     "empty": "The user has no {content}",
