--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -63,7 +63,7 @@
     "land_traded": "LAND échangé",
     "land_on_sale": "LAND à vendre",
     "transaction_description":
-      "LAND {parcel_link} vendu de {seller_link} à {buyer_link} pour {price}"
+      "Parcelle {parcel_link} vendu de {seller_link} à {buyer_link} pour {price}"
   },
 
   "profile_page": {
