--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -225,7 +225,17 @@
       "You have authorized the {marketplace_contract_link} to operate LAND on your behalf",
     "authorize":
       "Authorize the {marketplace_contract_link} to operate LAND on your behalf",
-    "authorization": "Authorization"
+    "authorization": "Authorization",
+    "you_approved_mortgage_mana":
+      "You have authorized the {mortgage_contract_link} to operate MANA on your behalf",
+    "approve_mortgage_mana":
+      "Authorize the {mortgage_contract_link} to operate MANA on your behalf",
+    "you_approved_mortgage_rcn":
+      "You have authorized the {mortgage_contract_link} to operate RCN on your behalf",
+    "approve_mortgage_rcn":
+      "Authorize the {mortgage_contract_link} to operate RCN on your behalf",
+    "mortgage_contract":
+      "Mortgage contract"
   },
   "transfer_mana": {
     "title": "Transfer MANA",
