feat: dashboard queries (#203)
* feat: dashboard queries

* feat: first UI

* feat: extract logic to their own files

* feat: fetch and print dashboard data

* fix: rebase problems

* feat: render dashboard stats UI

* feat: render latest transactions. i18n. always return pubs

* feat: dashboard navbar

* feat: add full tx date as title

* fix: prop-types

* fix: reference to old class method isOnSale

* fix: use publications instead of parcels to avoid race conditions

* fix: border radius and avoid stretching canvas

* chore: removed console.log 😅

* chore: renamed dashboard to stats

* feat: bigger and localized stats

* fix: mobile styles

* chore: changed LAND to Parcel

* feat: update styling

* fix: use onSale everywhere

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -9,6 +9,8 @@
   "global": {
     "atlas": "Atlas",
     "marketplace": "Mercado",
+    "dashboard": "Dashboard",
+    "profile": "Mi LAND",
     "activity": "Actividad",
     "parcels": "Parcelas",
     "contributions": "Contribuciones",
@@ -36,9 +38,6 @@
   "address": {
     "its_you": "Eres tú!"
   },
-  "navbar": {
-    "my_land": "Mi LAND"
-  },
   "atlas": {
     "owner": "Dueño: {owner}",
     "no_owner": "Sin Dueño",
@@ -54,6 +53,16 @@
       "cheapest": "Más baratas",
       "close_to_expire": "Por terminar"
     }
+  },
+  "dashboard": {
+    "stats_title": "Estadísticas",
+    "transactions_title": "Últimas transacciones",
+    "land_owners": "Dueños de LAND",
+    "active_users": "Usuarios activos",
+    "land_traded": "LAND intercambiada",
+    "land_on_sale": "LAND a la venta",
+    "transaction_description":
+      "Parcela {parcel_link} vendida por {seller_link} a {buyer_link} por {price}"
   },
   "profile_page": {
     "empty": "El usuario no tiene {content}",
