--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -9,6 +9,8 @@
   "global": {
     "atlas": "Atlas",
     "marketplace": "Marketplace",
+    "dashboard": "Stats",
+    "profile": "My Land",
     "activity": "Activity",
     "parcels": "Parcels",
     "contributions": "Contributions",
@@ -36,9 +38,6 @@
   "address": {
     "its_you": "It's you"
   },
-  "navbar": {
-    "my_land": "My Land"
-  },
   "atlas": {
     "owner": "Owner: {owner}",
     "no_owner": "No Owner",
@@ -54,6 +53,16 @@
       "cheapest": "Cheapest",
       "close_to_expire": "Closest to expire"
     }
+  },
+  "dashboard": {
+    "stats_title": "Some numbers",
+    "transactions_title": "Latest Transactions",
+    "land_owners": "LAND owners",
+    "active_users": "Active users",
+    "land_traded": "LAND traded",
+    "land_on_sale": "LAND on sale",
+    "transaction_description":
+      "Parcel {parcel_link} sold from {seller_link} to {buyer_link} for {price}"
   },
   "profile_page": {
     "empty": "The user has no {content}",
