--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -9,6 +9,8 @@
   "global": {
     "atlas": "Atlas",
     "marketplace": "Marché",
+    "dashboard": "Tableau de bord",
+    "profile": "Mes LANDs",
     "activity": "Activité",
     "parcels": "Parcelles",
     "contributions": "Contributions",
@@ -37,9 +39,6 @@
   "address": {
     "its_you": "C'est toi"
   },
-  "navbar": {
-    "my_land": "Mes LANDs"
-  },
   "atlas": {
     "owner": "Propriétaire : {owner}",
     "no_owner": "Aucun propriétaire",
@@ -56,6 +55,17 @@
       "close_to_expire": "Près de l'expiration"
     }
   },
+  "dashboard": {
+    "stats_title": "Quelques chiffres",
+    "transactions_title": "Dernières transactions",
+    "land_owners": "Propriétaires de LAND",
+    "active_users": "Utilisateurs actifs",
+    "land_traded": "LAND échangé",
+    "land_on_sale": "LAND à vendre",
+    "transaction_description":
+      "Parcelle {parcel_link} vendu de {seller_link} à {buyer_link} pour {price}"
+  },
+
   "profile_page": {
     "empty": "L'utilisateur n'as pas de {content}",
     "on_sale": "A vendre"
