--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -33,7 +33,8 @@
     "owned_by": "Owned by",
     "owned_by_link": "Owned by {address_link}",
     "connecting": "Connecting",
-    "click_here": "Click here"
+    "click_here": "Click here",
+    "request": "Request"
   },
   "address": {
     "its_you": "It's you"
@@ -98,7 +99,8 @@
     "publication": {
       "price": "Price",
       "time_left": "Time Left",
-      "buy": "Buy"
+      "buy": "Buy",
+      "mortgage": "Request Mortgage"
     },
     "owner": {
       "part_of": "Part of {name}",
@@ -200,7 +202,8 @@
     "cancel": "You cancelled the {publication_link} on {parcel_link}",
     "buy_mana": "You bought {mana} MANA",
     "mortgage_mana": "You {action} the {mortgage_contract_link} to operate MANA on your behalf.",
-    "mortgage_rcn": "You {action} the {mortgage_contract_link} to operate RCN on your behalf."
+    "mortgage_rcn": "You {action} the {mortgage_contract_link} to operate RCN on your behalf.",
+    "create_mortgage": "You requested a mortgage for the parcel {parcel_link}"
   },
   "transaction_status": {
     "see_activity":
@@ -303,5 +306,21 @@
     "watch_tutorial": "Watch the tutorial",
     "newest_lands": "Newest LAND",
     "view_more": "View More"
+  },
+  "mortgage": {
+    "request": "Requesting a Mortgage",
+    "request_land": "You are about to request a mortgage for {parcel_name} valued in {parcel_price}",
+    "oracle": "Oracle contract address",
+    "amount": "Mortgage total",
+    "duration": "Mortgage duration",
+    "duration_placeholder": "Duration date for the mortgage",
+    "payable": "Payable at",
+    "payable_placeholder": "Payable date for the mortgage",
+    "interest_rate": "Interest rate",
+    "interest_rate_placeholder": "Interest rate",
+    "punitory_rate": "Punitory interest rate",
+    "punitory_rate_placeholder": "Punitory rate",
+    "expiration": "Request expiration",
+    "expiration_placeholder": "Expiration date for the mortgage"
   }
 }
